--- a/metaplug/templates/metaplug.yaml
+++ b/metaplug/templates/metaplug.yaml
@@ -21,6 +21,7 @@ spec:
       containers: 
       - name: plug
         image: gwolf3/metaplug-demo:0.0.3
+        imagePullPolicy: Always
         env:
         - name: BITCOM
           value: '19HxigV4QyBv3tHpQVcUEQyq1pzZVdoAut'
